actuazlice la img de about

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="mt-12 md:mt-0">
-                    <img src="https://images.unsplash.com/photo-1531973576160-7125cd663d86" alt="About Us Image" class="object-cover rounded-lg shadow-md">
+                    <img src="https://www.barbershopvalencia.com/cdn/shop/articles/Barberia_Valencia_68e3ff54-1e86-4250-bc2c-25c757084047.png?v=1647723537" alt="About Us Image" class="object-cover rounded-lg shadow-md">
                    
                 </div>
             </div>
